https://acmp.ru/index.asp?main=task&id_task=4